# solang

./: .gitignore  Cargo.toml  Dockerfile  build.rs
.github/workflows/: test.yml
integration/polkadot/: build.sh
integration/subxt-tests/: Cargo.toml  rust-toolchain.toml
integration/subxt-tests/src/: lib.rs
integration/subxt-tests/src/cases/: array_struct_mapping_storage.rs  arrays.rs  asserts.rs  balances.rs  builtins.rs  builtins2.rs  create_contract.rs  destruct.rs  events.rs  external_call.rs  flipper.rs  issue666.rs  msg_sender.rs  primitives.rs  randomizer.rs  store.rs  structs.rs  uniswapv2_erc20.rs  uniswapv2_factory.rs  uniswapv2_pair.rs
src/: lib.rs
src/abi/: substrate.rs
src/abi/substrate/: registry.rs
src/abi/substrate/registry/: converter.rs
src/emit/: binary.rs  functions.rs  mod.rs
src/emit/polkadot/: mod.rs  storage.rs  target.rs
src/emit/polkadot_riscv/: mod.rs  storage.rs  target.rs
src/linker/: linker.cpp  mod.rs  rv.rs
src/sema/: ast.rs  contracts.rs  mod.rs  mutability.rs  namespace.rs
src/sema/yul/tests/: expression.rs
stdlib/: Makefile  bigint.c  format.c  heap.c  polkavm_guest.c  polkavm_guest.h  stdlib.c
tests/: substrate.rs
tests/substrate_tests/: arrays.rs  builtins.rs  calls.rs  contracts.rs  events.rs  expressions.rs  format.rs  inheritance.rs  loops.rs  mappings.rs  strings.rs  structs.rs
