[package]
authors = ["Sean Young <sean@mess.org>"]
build = "build.rs"
description = "Solang Solidity Compiler"
documentation = "https://solang.readthedocs.io/"
edition = "2021"
homepage = "https://github.com/hyperledger-labs/solang"
keywords = ["solidity", "compiler", "solana", "substrate", "ewasm"]
license = "Apache-2.0"
name = "solang"
version = "0.1.10"

[build-dependencies]
cc = "1.0"

[dependencies]
alt-scale-info = {git = "https://github.com/paritytech/scale-info", package = "scale-info", optional = true, branch = "aj/custom-meta-types"}
anyhow = {version = "1.0.58", optional = true}
base58 = "0.2.0"
bitvec = "0.20"
blake2-rfc = "0.2.18"
clap = "3.1"
codespan-reporting = "0.11"
contract-metadata = "1.4.0"
funty = "2.0"
handlebars = "4.2"
hex = "0.4"
indexmap = "1.8"
ink_metadata = {version = "3.3.0", optional = true}
ink_primitives = {version = "3.3.0", optional = true}
inkwell = {version = "^0.1.0-beta.4", features = ["target-webassembly", "target-bpf", "no-libffi-linking", "llvm13-0"], optional = true}
itertools = "0.10"
libc = {version = "0.2", optional = true}
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
once_cell = "1.9"
parity-wasm = "0.42"
phf = "0.10.1"
regex = "1"
ripemd = "0.1"
scale-info = {version = "2.1.2", optional = true}
semver = {version = "^1.0.3", features = ["serde"]}
serde = "1.0"
serde_derive = {version = "1.0"}
serde_json = "1.0"
sha2 = "0.10"
solang-parser = {path = "solang-parser", version = "0.1.2"}
sp-core = {version = "6.0.0", optional = true}
tempfile = "3.3"
tiny-keccak = {version = "2.0", features = ["keccak"]}
tokio = {version = "1.16", features = ["rt", "io-std", "macros"]}
tower-lsp = "0.15"

[dev-dependencies]
ethabi = "16.0"
num-derive = "0.3"
parity-scale-codec = "3.0.0"
parity-scale-codec-derive = "3.0.0"
rand = "0.7"
sha2 = "0.10"
wasmi = "0.11"
# solana_rbpf makes api changes in patch versions
assert_cmd = "2.0"
bincode = "1.3"
byteorder = "1.3"
ed25519-dalek = "1.0"
solana_rbpf = "=0.2.24"

[package.metadata.docs.rs]
no-default-features = true

[profile.release]
lto = true

[features]
default = ["llvm", "ink_compat"]
ink_compat = ["ink_metadata", "scale-info", "anyhow", "sp-core", "ink_primitives", "alt-scale-info"]
llvm = ["inkwell", "libc"]

[workspace]
members = ["solang-parser"]
