[package]
edition = "2021"
name = "subxt-tests"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
async-trait = "0.1.57"
contract-metadata = "1.5.0"
contract-transcode = "0.1.0"
hex = "0.4.3"
ink_metadata = "3.3.1"
jsonschema = "0.16.0"
num-bigint = "0.4.3"
once_cell = "1.14.0"
pallet-contracts-primitives = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
parity-scale-codec = "3.1.5"
rand = "0.8.5"
serde_json = "1.0.85"
sp-core = "6.0.0"
sp-keyring = "6.0.0"
subxt = "0.23.0"
tokio = {version = "1.20.1", features = ["rt-multi-thread", "macros", "time"]}

[workspace]
members = []
